src/objects/APTS_Contract_Pricing_Settings__mdt.object
<CustomObject>
    <description>This custom setting is used for Contract Pricing.</description>
    <fields>
        <fullName>APTS_Bucket_10__c</fullName>
        <description>Enter comma separated(w/o whitespace) types in the field. 
Bucket 10 Adjustments will use Bucket 9&apos;s final Price to retrieve the Adjustment Amount.</description>
        <inlineHelpText>Enter comma separated(w/o whitespace) types in the field. 
Bucket 10 Adjustments will use Bucket 9&apos;s final Price to retrieve the Adjustment Amount.</inlineHelpText>
        <label>Bucket 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bucket_1__c</fullName>
        <description>Enter comma separated(w/o whitespace) types in the field. 
This is the first bucket and this bucket adjustments will be applied to the Line Item&apos;s Base Price</description>
        <inlineHelpText>Enter comma separated(w/o whitespace) types in the field. 
This is the first bucket and this bucket adjustments will be applied to the Line Item&apos;s Base Price</inlineHelpText>
        <label>Bucket 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bucket_2__c</fullName>
        <description>Enter comma separated(w/o whitespace) types in the field. 
Bucket 2 Adjustments will use Bucket 1&apos;s final Price to retrieve the Adjustment Amount.</description>
        <inlineHelpText>Enter comma separated(w/o whitespace) types in the field. 
Bucket 2 Adjustments will use Bucket 1&apos;s final Price to retrieve the Adjustment Amount.</inlineHelpText>
        <label>Bucket 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Sequence__c</fullName>
        <description>This field is used for the sequencing of the discount application. 
Please give comma separated values in the field.</description>
        <inlineHelpText>Please give comma separated values WITHOUT Space in the field. e.g., PPR,TPR,EFF
This field is used for the sequencing of the discount application.</inlineHelpText>
        <label>Discount Sequence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Type__c</fullName>
        <description>This field is used for the sequencing of the Sub Type.</description>
        <inlineHelpText>Please give comma separated values WITHOUT Space in the field. e.g., PPR,Price Restitution,Standard TPR 
This field is used for the sequencing of the Sub Type Application.</inlineHelpText>
        <label>Sub Type</label>
        <type>TextArea</type>
    </fields>
    <label>Contract Pricing Setting</label>
    <pluralLabel>Contract Pricing Settings</pluralLabel>
</CustomObject>